--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/cra-rtk-ts-pnpm-vite/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/cra-rtk-ts-pnpm-vite/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/cra-rtk-ts-pnpm-vite/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -26,8 +26,8 @@
     -->
     <title>React Redux App</title>
     
-    <script type="module" crossorigin src="/assets/index.24e663bf.js"></script>
-    <link rel="stylesheet" href="/assets/index.1e7b274f.css">
+    <script type="module" crossorigin src="/cra-rtk-ts-pnpm-vite/assets/index.99fa9c2b.js"></script>
+    <link rel="stylesheet" href="/cra-rtk-ts-pnpm-vite/assets/index.1e7b274f.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
